# event_api-fastapi

./: .gitignore  pyproject.toml  requirements.txt
app/: main.py
app/api/routes/: event.py  profile.py  storage.py
app/core/: cache.py  config.py  logging.py  permissions.py  response.py
app/db/: session.py
app/modules/auth/: dependencies.py  router.py
app/modules/auth/crud/: users.py
app/modules/auth/schemas/: __init__.py  models.py
app/modules/auth/services/: auth_service.py
app/modules/booking/: router.py  schemas.py
app/modules/event/: router.py
app/modules/event/crud/: events.py  likes_favorites.py
app/modules/event/schemas/: __init__.py  interactions.py  models.py
app/modules/favorite/: router.py
app/modules/profile/: router.py
app/modules/profile/crud/: profiles.py
app/modules/profile/schemas/: __init__.py  models.py
app/modules/review/: router.py
app/services/: email.py
scratch/: test_email.py
scripts/: seed.py
